test/sema/typeck/lambda/variadic-tuple-type.dora
fn f(value: (Int32...)) {}
